[tool.poetry]
name = "2048-ai"
version = "0.1.0"
description = ""
authors = ["Joona Kauppila <joona.kauppila@helsinki.fi>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
