[tool.poetry]
name = "2048-ai"
version = "0.1.0"
description = ""
authors = ["Joona Kauppila <joona.kauppila@helsinki.fi>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
simple-term-menu = "^1.5.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
autopep8 = "^2.0.1"
pytest = "^7.2.0"
coverage = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
